# psp2lib

./: .gitignore  .travis.yml  autogen.sh  compile.sh  install.sh
src/: Makefile.am  autogen.sh  configure.ac
src/libsupc++/: Makefile.am  pure.cc
src/libsysbase/: Makefile.am
src/start/: Makefile.am  crt0.c
